--- a/base.cfg
+++ b/base.cfg
@@ -1,5 +1,5 @@
 [buildout]
-index = http://pypi.bluedynamics.eu
+#index = http://pypi.bluedynamics.eu
 parts = test coverage gunicorn py   
 develop = .
 
