wrap array template with div blueprint

--- a/base.cfg
+++ b/base.cfg
@@ -15,6 +15,7 @@ yafowil.webob = git git@github.com:bluedynamics/yafowil.webob.git
 [test]
 recipe = zc.recipe.testrunner
 eggs = 
+    yafowil[test]
     yafowil.widget.array[test]
 
 [coverage]
