fix buildout, prefer finals

--- a/base.cfg
+++ b/base.cfg
@@ -1,6 +1,7 @@
 [buildout]
 #index = http://pypi.bluedynamics.eu
 parts = test coverage gunicorn py   
+prefer-final = true
 develop = .
 
 extensions = mr.developer
