--- a/base.cfg
+++ b/base.cfg
@@ -1,6 +1,6 @@
 [buildout]
 #index = http://pypi.bluedynamics.eu
-parts = test coverage gunicorn py   
+parts = test coverage py   
 prefer-final = true
 develop = .
 
@@ -23,12 +23,6 @@ eggs =
 recipe = zc.recipe.testrunner
 eggs = ${test:eggs}
 defaults = ['--coverage', '../../coverage', '-v', '--auto-progress']
-
-[gunicorn]
-recipe = zc.recipe.egg:scripts
-eggs = 
-    ${test:eggs}
-    gunicorn 
     
 [py]
 recipe = zc.recipe.egg
