--- a/base.cfg
+++ b/base.cfg
@@ -18,6 +18,7 @@ recipe = zc.recipe.testrunner
 eggs = 
     yafowil[test]
     yafowil.widget.array[test]
+defaults = ['--auto-color', '--auto-progress']
 
 [coverage]
 recipe = zc.recipe.testrunner
