--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,15 @@
+*~
+*#*
 *.pyc
-*.pyo
-src/yafowil.widget.array.egg-info/
-.project
-.pydevproject
-.installed.cfg
-.mr.developer.cfg
-bin/
-develop-eggs/
-devsrc/
-eggs/
-parts/
-dist/
+*.egg-info
+/develop-eggs/
+/parts/
+/bin/
+/eggs/
+/dist/
+/devsrc/
+/.installed.cfg
+/.pydevproject
+/.project
+/.DS_Store
+/.mr.developer.cfg
