--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,6 @@
 include *.py
 include *.rst
+include .jshintrc
 include buildout.cfg
-recursive-include src *
 recursive-exclude src *.pyc *.pyo
+recursive-include src *
