setup karma and rollup

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,23 @@
-*~
-*#*
-*.pyc
+
 *.egg-info
-/develop-eggs/
-/parts/
-/bin/
-/eggs/
-/dist/
-/devsrc/
-/.installed.cfg
-/.pydevproject
-/.project
+*.pyc
+*#*
+*~
 /.DS_Store
+/.installed.cfg
 /.mr.developer.cfg
+/.project
+/.pydevproject
+/bin/
+/develop-eggs/
+/devsrc/
+/dist/
+/eggs/
+/karma/
+/lib/
+/lib64
+/node_modules/
+/package-lock.json
+/parts/
+/pyvenv.cfg
+/share/
