--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "qunit": "^2.18.0",
     "rollup": "^2.70.1",
     "rollup-plugin-cleanup": "^3.2.1",
-    "rollup-plugin-terser": "^7.0.2"
+    "rollup-plugin-terser": "^7.0.2",
+    "sass": "^1.50.1"
   }
 }
