--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,5 +34,8 @@ test = [
 register = "yafowil.widget.array:register"
 example = "yafowil.widget.array.example:get_example"
 
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/yafowil"]
 [tool.zest-releaser]
 create-wheel = true
