--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 *.pyo
 /.coverage
 /.mxmake/
+/build
+/constraints-mxdev.txt
 /coverage/
 /dist/
 /htmlcov/
@@ -12,5 +14,5 @@
 /py3/
 /pypy3/
 /requirements-mxdev.txt
+/sources/
 /venv/
-/build
