--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,19 @@ path = "CHANGES.rst"
 [[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
 path = "LICENSE.rst"
 
+[tool.hatch.build.targets.sdist]
+exclude = [
+    "/.github/",
+    "/js/",
+    "/Makefile",
+    "/mx.ini",
+    "/mxmake.yaml",
+    "/package-lock.json",
+    "/package.json",
+    "/pnpm-lock.yaml",
+    "/scss",
+]
+
 [tool.hatch.build.targets.wheel]
 packages = ["src/yafowil"]
 
