--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "yafowil.widget.array"
-version = "2.0.0.dev0"
+version = "2.0.0"
 description = "Array Widget for YAFOWIL"
 readme = "README.rst"
 license = {text = "Simplified BSD"}
